--- a/estilos.css
+++ b/estilos.css
@@ -254,23 +254,26 @@ li a.active, li a:hover{
 .conteiner_servicios .card .fa-truck{
     font-size: 40px;
     margin-bottom: 20px;
+    color: rgba(219,72,89)
 }
 
 .conteiner_servicios .fa-square-check{
     font-size: 40px;
     margin-bottom: 20px;
+    color: rgb(219, 72, 89);
 }
 
 .conteiner_servicios .fa-envira{
     font-size: 40px;
     margin-bottom: 20px;
+    color: rgb(219, 72, 89);
 }
 
 
 .conteiner_servicios .card h3{
     font-size: 2rem;
     font-weight: 500;
-    color: black;
+    color: rgb(219, 72, 89);
     letter-spacing: 1px;
 }
 
